# actix-learning-platform

./: .env.dev  Cargo.toml  Justfile  compose.dev.yaml  todo.md
migrations/: 20231025234448_create_user_table.sql
src/: main.rs
