[package]
name = "actix-learning-platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["uuid", "chrono", "postgres", "runtime-tokio", "tls-native-tls"] }
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.5.0", features = ["v7", "serde", "std"] }
